feat: adds rest routes for users [x] SearchUsers [x] FindUser
